API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

10-Jan-2003	Terry Biggs <tbiggs@infinet.com>
	Added new osisstrongs and osismorph support to gbfhtml*.

08-Jan-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added new osisstrongs and osismorph option filters.
	Hacked gbfrtf to support, for now:
		the osis <w> tag,
		Removed OSIS <note>...</note>,
		Removed any empty strongs tags for the article.

19-Dec-2002	Joachim Ansorg <joachim@ansorgs.de>
	Removed old russian book locale file, because it wasn't
		working in Linux AND Windows
	Added book locale files (cp1251 and koi8-r) submitted by
		Pavlo Bohmat bohm@ukr.net to support Windows
		and Linux.

30-Nov-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added Finnish locale files contributed by Tero
		Favorin <tero at favorin dot com>

27-Nov-2002     Joachim Ansorg <joachim@ansorgs.de>
	Worked on Swig bindings. They work now with latest CVS.

25-Nov-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added Chris' ThMLVariants option filter to SWMgr

21-Nov-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added support to ListKey to test for inclusion in
		set. eg. listKey.setText("mat 2:2") will set
		listKey.Error() to true if Matthew 2:2 is not
		in the listkey set.  listKey will also be set
		to the correct subKey and position if it IS
		in the set.

09-Nov-2002	Troy A. Griffitts <scribe@crosswire.org>
	Updated ICU headers and Thai transliterator per
		Steven Loomis' recommendations.

29-Oct-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added SWModule *SWMgr::getModule(const char *modName);
	Added Terry Biggs' patch to htmlref filters to
		more consistently deal with strongs numbers

23-Oct-2002	Daniel Glassey <dglassey@crosswire.org>
	Some base work for installmgr on classes to 
		manage mods.d


* Release 1.5.5 *

22-Oct-2002	Troy A. Griffitts <scribe@crosswire.org>
	Updated hu locale submitted from Mentler Gyula
	Fixed bug in Book parsing that took first matching